name:           scape
version:        1.0.0.0
synopsis:       Roguelike
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

executable app
  build-depends:    base, miso, containers
  if impl(ghcjs)
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER
  else
    build-depends:  jsaddle, jsaddle-warp, transformers, warp, wai-app-static, websockets
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:    Game, Scene, View, Input